--- a/index.html
+++ b/index.html
@@ -8,5 +8,9 @@
 </head>
 <body>
     <h1>Hola</h1>
+    <h2> Haciendo unas cositas</h2>
+    <div>
+        <p> Este es un parrafo</p>
+    </div>
 </body>
 </html>
