--- a/index.html
+++ b/index.html
@@ -8,9 +8,8 @@
 </head>
 <body>
     <h1>Hola</h1>
-    <h2> Haciendo unas cositas</h2>
     <div>
-        <p> Este es un parrafo</p>
+        <p><a href="https://twitter.com/RodolfoTibu">@rodolfotibu</a></p>
     </div>
 </body>
 </html>
